--- a/morte.cabal
+++ b/morte.cabal
@@ -51,9 +51,13 @@ Library
         system-fileio      >= 0.2.1    && < 0.4  ,
         text               >= 0.11.1.0 && < 1.3  ,
         text-format                       < 0.4  ,
-        transformers       >= 0.2.0.0  && < 0.5
+        transformers       >= 0.2.0.0  && < 0.5  ,
+        unbound            >= 0.4.4    && < 0.5  ,
+        either             >= 4.4.1    && < 5.0  ,
+        mmorph             >= 1.0.0    && < 1.1
     Exposed-Modules:
         Morte.Core,
+        Morte.CoreUnbound
         Morte.Import,
         Morte.Lexer,
         Morte.Parser,
